syntax = "proto3";

option csharp_namespace = "DataAcquisitionSystemModbusProtocol.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";
import "google/protobuf/timestamp.proto";
//import "sample.proto";

service DigitalVariable
{
	rpc CreateDigitalVariable (CreateDigitalVariableRequest) returns (DigitalVariableDTO);
	rpc GetDigitalVariable (GetRequest) returns (NullableDigitalVariableDTO);
	rpc GetAllDigitalVariables (google.protobuf.Empty) returns (DigitalVariables);
	rpc UpdateDigitalVariable (DigitalVariableDTO) returns (google.protobuf.Empty);
	rpc DeleteDigitalVariable (DeleteRequest) returns (google.protobuf.Empty);
}

message DigitalVariableDTO
{
	string name = 1;
	VariableType variableType = 2;
	string code = 3;
	google.protobuf.Timestamp samplingPeriod = 4;
	string modbusProtocolDirection = 5;
	//Samples samples = 6;
}

message DigitalVariables
{
	repeated DigitalVariableDTO items = 1;
}

message NullableDigitalVariableDTO
{
	oneof kind
	{
		google.protobuf.NullValue null = 1;
		DigitalVariableDTO digitalVariable = 2;
	}
}


message CreateDigitalVariableRequest
{
	string name = 1;
	VariableType variableType = 2;
	string code = 3;
}